# n8n_anamoly_detection

./: .env  .gitignore  Dockerfile.analyzer  Dockerfile.detector  Dockerfile.generator  README.md  Workflow_NetworkAnamolyDetector.json  anomalies.json  anomaly_detector.py  design.drawio  docker-compose.yml  llm_analyzer.py  network_data_generator.py  network_data_generator_v2.py  pyproject.toml
n8n/workflows/: generator_workflow.json
scripts/: n8n-entrypoint.sh
