[tool.poetry]
name = "n8n"
version = "0.1.0"
description = "Generate network time series data and push to InfluxDB for anomaly detection demos."
authors = ["your.email@example.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
influxdb-client = "*"
numpy = "*"
pandas = "*"
dotenv = "^0.9.9"
